--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"webpack-stream": "^6.1.1"
 	},
 	"dependencies": {
-		"@fontsource/poppins": "^4.5.3"
+		"@fontsource/poppins": "^4.5.3",
+		"tiny-slider": "^2.9.4"
 	}
 }
